Update: ULorry import in experiments

--- a/exps/bimodal_mu_bs/muon_bs_investigation.ipynb
+++ b/exps/bimodal_mu_bs/muon_bs_investigation.ipynb
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.optimisation import ULorryPassiveGenerator"
+    "from tomopt.benchmarks import ULorryPassiveGenerator"
    ]
   },
   {
