--- a/exps/may_demo/May_demo_centre_below.ipynb
+++ b/exps/may_demo/May_demo_centre_below.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
+   "id": "d95c5580",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
+   "id": "02609090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
+   "id": "43075d66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
+   "id": "2d4c6288",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
+   "id": "e0323ca4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,6 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
+   "id": "70a77166",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
+   "id": "c2a1f9b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,6 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
+   "id": "90290982",
    "metadata": {},
    "outputs": [
     {
@@ -154,6 +162,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "912062c5",
    "metadata": {},
    "source": [
     "# Volume classifier"
@@ -161,6 +170,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c86f3b74",
    "metadata": {},
    "source": [
     "# Optimisation"
@@ -169,15 +179,17 @@
   {
    "cell_type": "code",
    "execution_count": 93,
+   "id": "7716010f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.optimisation import ULorryPassiveGenerator"
+    "from tomopt.benchmarks import ULorryPassiveGenerator"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 94,
+   "id": "40d34cda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
+   "id": "ea45092d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
+   "id": "1a279c18",
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
+   "id": "998bfbdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,6 +246,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8b3a7c25",
    "metadata": {},
    "source": [
     "## Initial performance"
@@ -239,6 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
+   "id": "6e134db5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,6 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
+   "id": "ad08e5db",
    "metadata": {},
    "outputs": [
     {
@@ -272,6 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
+   "id": "e81fb175",
    "metadata": {},
    "outputs": [
     {
@@ -290,6 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
+   "id": "a4f2c46d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,6 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
+   "id": "8963caac",
    "metadata": {},
    "outputs": [
     {
@@ -328,6 +349,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "80e8ce3f",
    "metadata": {},
    "source": [
     "## Optimise"
@@ -336,6 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
+   "id": "80ba2c37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,6 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "365f1b6b",
    "metadata": {
     "scrolled": false
    },
@@ -419,6 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7cd39479",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,6 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b3171b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,6 +462,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6011f66c",
    "metadata": {},
    "source": [
     "## Optimised performance"
@@ -444,6 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f0b57f1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,6 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ad829de5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,6 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e79a7665",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,6 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "000ad219",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,6 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "12a772f6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -505,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.0"
   },
   "toc": {
    "base_numbering": 1,
