--- a/exps/may_demo/May_demo_offset-rerun2.ipynb
+++ b/exps/may_demo/May_demo_offset-rerun2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "422fd4a9",
    "metadata": {},
    "outputs": [],
@@ -168,17 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f4cd6632",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.optimisation import ULorryPassiveGenerator"
+    "from tomopt.benchmarks import ULorryPassiveGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6c4961f0",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "097574bf",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "be2a294f",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "tensor(2., grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "60633930",
    "metadata": {},
    "outputs": [],
