--- a/exps/z_sep/z_sep_data_generation.ipynb
+++ b/exps/z_sep/z_sep_data_generation.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "46fbdb99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "2cabcd85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "f9c4ab91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "bdb4a3c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
+   "id": "901d8db1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "fcc46e4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,6 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
+   "id": "ac685789",
    "metadata": {},
    "outputs": [
     {
@@ -146,15 +153,17 @@
   {
    "cell_type": "code",
    "execution_count": 39,
+   "id": "c3eaf0ec",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tomopt.optimisation import ULorryPassiveGenerator"
+    "from tomopt.benchmarks import ULorryPassiveGenerator"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 40,
+   "id": "07fa2c7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,6 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "6eff02bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,6 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "725f411b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,6 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "05a1da3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,6 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "79295a60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,6 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
+   "id": "b4f953a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
+   "id": "02c89e66",
    "metadata": {},
    "outputs": [
     {
@@ -265,6 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
+   "id": "f88e2b59",
    "metadata": {},
    "outputs": [
     {
@@ -297,6 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
+   "id": "319dcb24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,6 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
+   "id": "94e4de88",
    "metadata": {},
    "outputs": [
     {
@@ -335,6 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
+   "id": "aa14244f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,6 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
+   "id": "299c3695",
    "metadata": {},
    "outputs": [
     {
@@ -371,6 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0885ae52",
    "metadata": {},
    "outputs": [
     {
@@ -1039,6 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
+   "id": "d91230a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,6 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
+   "id": "6ee9da28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,6 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
+   "id": "d2c4c9bb",
    "metadata": {},
    "outputs": [
     {
@@ -1283,6 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
+   "id": "f7ab7a84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1292,6 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "106f3d53",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1313,7 +1339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.0"
   },
   "toc": {
    "base_numbering": 1,
