LadleFurnacePassiveGenerator now always generates at least one layer filled

--- a/dev/int_class_loss.ipynb
+++ b/dev/int_class_loss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c5342eba",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "47cf08d2",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "621de9de",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "54edaba1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f1652cd8",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "717b42db",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e39f4acb",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "df0b44c1",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "d56a72ed",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "         -1.0000e+01, -1.0000e+01]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ab7d5366",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
        "tensor([[-0.8390, -2.8390, -4.8390, -5.8390, -4.8390, -2.8390, -0.8390]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "1b927a26",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
        "tensor([[-9.0154, -7.0154, -5.0154, -0.0154, -5.0154, -7.0154, -9.0154]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "1fd6ff93",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "tensor(0.0003)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "847bba24",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "tensor(0.0154)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2ef9fd87",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "tensor(5.8390)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "4c26ee6d",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
        "tensor(5.0154)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "0c401bf5",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "tensor(5.0154)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "f0a93ca8",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "tensor([0, 1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "7c9fb14f",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "tensor([9, 4, 1, 0, 1, 4, 9])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "090c2588",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "         1.0937e-03]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "87182755",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "tensor([8.8773])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "id": "2ac92024",
    "metadata": {},
    "outputs": [],
@@ -364,13 +364,14 @@
     "def frac_mse(probs, targs):\n",
     "    ints = torch.arange(probs.size(1))\n",
     "    mses = (targs-ints)**2\n",
+    "    print(mses)\n",
     "    losses = mses*torch.exp(probs)\n",
     "    return losses.sum(-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "id": "2cfafd90",
    "metadata": {},
    "outputs": [
@@ -378,18 +379,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([9, 4, 1, 0, 1, 4, 9])\n",
-      "tensor([[4.0849e-04, 1.8155e-04, 4.5388e-05, 0.0000e+00, 4.5388e-05, 1.8155e-04,\n",
-      "         4.0849e-04]])\n"
+      "tensor([3, 2, 1, 0, 1, 2, 3])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([0.0013])"
+       "tensor([0.0005])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 44,
    "id": "9cac6ddb",
    "metadata": {
     "scrolled": true
@@ -410,17 +409,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([9, 4, 1, 0, 1, 4, 9])\n",
-      "tensor([[3.8893, 0.2339, 0.0079, 0.0000, 0.0079, 0.2339, 3.8893]])\n"
+      "tensor([3, 2, 1, 0, 1, 2, 3])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([8.2623])"
+       "tensor([2.8426])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 45,
    "id": "83f4a94f",
    "metadata": {
     "scrolled": true
@@ -441,17 +439,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([9, 4, 1, 0, 1, 4, 9])\n",
-      "tensor([[0.0011, 0.0036, 0.0066, 0.0000, 0.0066, 0.0036, 0.0011]])\n"
+      "tensor([3, 2, 1, 0, 1, 2, 3])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([0.0226])"
+       "tensor([0.0176])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "id": "58e7de2c",
    "metadata": {
     "scrolled": true
@@ -472,17 +469,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([9, 4, 1, 0, 1, 4, 9])\n",
-      "tensor([[0.0011, 0.0036, 0.9847, 0.0000, 0.0066, 0.0036, 0.0011]])\n"
+      "tensor([3, 2, 1, 0, 1, 2, 3])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([1.0007])"
+       "tensor([0.9956])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "id": "36cf3a6b",
    "metadata": {
     "scrolled": true
@@ -503,15 +499,97 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([9, 4, 1, 0, 1, 4, 9])\n",
-      "tensor([[8.8622e+00, 3.5917e-03, 1.2152e-04, 0.0000e+00, 6.6348e-03, 3.5917e-03,\n",
-      "         1.0937e-03]])\n"
+      "tensor([3, 2, 1, 0, 1, 2, 3])\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "tensor([8.8773])"
+       "tensor([2.9648])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frac_mse(y_pred_offset2, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "140798ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([4, 3, 2, 1, 0, 1, 2])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0006])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frac_mse(F.log_softmax(Tensor([[0,0,0,0,10,0,0]]), -1), Tensor([4]).long())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "1f9edc25",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0, 1, 2, 3, 4, 5, 6])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0010])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frac_mse(F.log_softmax(Tensor([[10,0,0,0,0,0,0]]), -1), Tensor([0]).long())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "02c1cef8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 0, 1, 2, 3, 4, 5])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0007])"
       ]
      },
      "execution_count": 50,
@@ -520,7 +598,63 @@
     }
    ],
    "source": [
-    "frac_mse(y_pred_offset2, y)"
+    "frac_mse(F.log_softmax(Tensor([[0,10,0,0,0,0,0]]), -1), Tensor([1]).long())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "89f63bfc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3, 2, 1, 0, 1, 2, 3])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0005])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frac_mse(F.log_softmax(Tensor([[0,0,0,10,0,0,0]]), -1), Tensor([3]).long())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "42418b49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([6, 5, 4, 3, 2, 1, 0])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0010])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frac_mse(F.log_softmax(Tensor([[0,0,0,0,0,0,10]]), -1), Tensor([6]).long())"
    ]
   },
   {
