Dev: int class losss and image processing

--- a/dev/furnace_stat.ipynb
+++ b/dev/furnace_stat.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "id": "2b1ed7b5",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='200' class='' max='200' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [200/200 22:59<00:00]\n",
+       "      100.00% [200/200 25:08<00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -267,6 +267,14 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/giles/cernbox/mode_muon_tomography/tomopt/inference/scattering.py:329: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  ../aten/src/ATen/native/TensorShape.cpp:2157.)\n",
+      "  idxs = torch.combinations(torch.arange(0, unc.shape[-1]), with_replacement=True)\n"
+     ]
     }
    ],
    "source": [
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "id": "f96b64c7",
    "metadata": {},
    "outputs": [],
@@ -291,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "id": "fa38d8b6",
    "metadata": {},
    "outputs": [
@@ -301,7 +309,7 @@
        "torch.Size([200, 10, 10, 10])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,12 +320,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "id": "fe79162a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File('furnace_data_1kmu_1e4.hdf5', \"w\") as outfile:\n",
+    "with h5py.File('furnace_data_1kmu_1e4_nozero.hdf5', \"w\") as outfile:\n",
     "    outfile.create_dataset('preds', data=preds, compression='lzf')\n",
     "    outfile.create_dataset('targs', data=targs, compression='lzf')"
    ]
