Feat: Add LadleFurnaceFillLevelInferrer

--- a/dev/furnace_stat_dev_new-loss-debiased.ipynb
+++ b/dev/furnace_stat_dev_new-loss-debiased.ipynb
@@ -223,6 +223,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "id": "e37dcf59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class A():\n",
+    "    def __init__(self, proc): self.proc=proc\n",
+    "    def a(self): print('a')\n",
+    "    def b(self): print('b')        \n",
+    "    def go(self):\n",
+    "        for i in self.proc: self.__getattribute__(i)()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "ee1ab88b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = A('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ffc56ea1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.go()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "c54fb73b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.__getattribute__('a')()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "dbcafd74",
    "metadata": {},
@@ -357,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "c820f454",
+   "id": "a8edb2f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b52c77b6",
+   "id": "bfc54912",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f3b51b13",
+   "id": "b30534d1",
    "metadata": {},
    "outputs": [
     {
