Feat: Add LadleFurnaceFillLevelInferrer

--- a/dev/furnace_stat_dev_new-loss-debiased.ipynb
+++ b/dev/furnace_stat_dev_new-loss-debiased.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0410d432",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "dbb16dc4",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "0a37b443",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f31a105a",
    "metadata": {},
    "outputs": [],
@@ -112,6 +112,27 @@
     "    )\n",
     "\n",
     "    return Volume(nn.ModuleList(layers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b87986be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([200, 1])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "targs.shape"
    ]
   },
   {
@@ -219,67 +240,6 @@
     "            )\n",
     "        print(\"Zero-ordered target layer ID (including ladel bottom layer):\", np.floor((targ-volume.get_passive_z_range()[0]-volume.passive_size)/volume.passive_size))\n",
     "        plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "e37dcf59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class A():\n",
-    "    def __init__(self, proc): self.proc=proc\n",
-    "    def a(self): print('a')\n",
-    "    def b(self): print('b')        \n",
-    "    def go(self):\n",
-    "        for i in self.proc: self.__getattribute__(i)()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "ee1ab88b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = A('a')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "ffc56ea1",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n"
-     ]
-    }
-   ],
-   "source": [
-    "a.go()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "id": "c54fb73b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n"
-     ]
-    }
-   ],
-   "source": [
-    "a.__getattribute__('a')()"
    ]
   },
   {
@@ -412,55 +372,12 @@
    "outputs": [],
    "source": [
     "def targ2class(targs, volume):\n",
-    "    return torch.div((targs-volume.get_passive_z_range()[0]), volume.passive_size, rounding_mode='floor')-1  # -1 due to flooring of mat_z during voxelisation"
+    "    return torch.div((targs-volume.get_passive_z_range()[0]), volume.passive_size, rounding_mode='floor')-1  # -1 due to conversion to layer ID, instead of fill height"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "a8edb2f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = torch.rand(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "bfc54912",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w = torch.zeros(10)\n",
-    "w[1] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "b30534d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0.0000, 0.5867, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "        0.0000])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a*w"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 37,
    "id": "293a669f",
    "metadata": {},
    "outputs": [],
@@ -480,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 22,
    "id": "252e750b",
    "metadata": {},
    "outputs": [],
@@ -491,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "id": "e64ca5eb",
    "metadata": {},
    "outputs": [],
@@ -512,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 74,
    "id": "d8c8fde6",
    "metadata": {},
    "outputs": [],
@@ -522,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 75,
    "id": "e5a21d6c",
    "metadata": {},
    "outputs": [
@@ -581,7 +498,7 @@
        "(None, None, None)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,6 +510,35 @@
     "x = get_max_sub_mean(x)\n",
     "plot_pred(x[test_id,:,None,None], targs[test_id])\n",
     "score_data(x, targs, pred_start=-1), score_data(x, targs, pred_start=0), score_data(x, targs, pred_start=1, test_id=test_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "d28b40c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-80-710f893e66b3>:1: UserWarning: __floordiv__ is deprecated, and its behavior will change in a future version of pytorch. It currently rounds toward 0 (like the 'trunc' function NOT 'floor'). This results in incorrect rounding for negative values. To keep the current behavior, use torch.div(a, b, rounding_mode='trunc'), or for actual floor division, use torch.div(a, b, rounding_mode='floor').\n",
+      "  (targs[test_id]-volume.get_passive_z_range()[0])//volume.passive_size\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([6.])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(targs[test_id]-volume.get_passive_z_range()[0])//volume.passive_size"
    ]
   },
   {
