Fix: GMM width tests

--- a/dev/int_class_loss.ipynb
+++ b/dev/int_class_loss.ipynb
@@ -26,6 +26,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "3f5a3a7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.6246)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(torch.max(torch.rand(30, 2), torch.tensor(0.2))).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "621de9de",
    "metadata": {},
