Tests: test scatterings

--- a/dev/full_scattering_model_comparison_tomopt-check.ipynb
+++ b/dev/full_scattering_model_comparison_tomopt-check.ipynb
@@ -60,6 +60,8 @@
     "from collections import defaultdict\n",
     "from prettytable import PrettyTable\n",
     "from scipy.stats import ks_2samp\n",
+    "import h5py\n",
+    "import json\n",
     "\n",
     "import torch\n",
     "from torch import Tensor, nn\n",
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "42a91739",
    "metadata": {},
    "outputs": [],
@@ -121,7 +123,7 @@
     "    layer = PassiveLayer(lw=Tensor([1,1]), z=1, size=0.1)\n",
     "    try: layer(1)\n",
     "    except: pass\n",
-    "    \n",
+    "        \n",
     "    # Get settings\n",
     "    df = pd.read_csv(file)\n",
     "    settings = file.stem.split('_')\n",
@@ -388,7 +390,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
+   "id": "687ab4de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer = PassiveLayer(lw=Tensor([1,1]), z=1, size=0.1)\n",
+    "try: layer(1)\n",
+    "except: pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "id": "fc66f9a9",
    "metadata": {},
    "outputs": [],
@@ -433,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6807401b",
+   "id": "8f5ba78c",
    "metadata": {
     "scrolled": false
    },
