--- a/dev/full_scattering_model_comparison_tomopt-check.ipynb
+++ b/dev/full_scattering_model_comparison_tomopt-check.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d27fb347",
    "metadata": {
     "scrolled": true
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "79f03115",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9315f1d6",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "59aaf2e5",
    "metadata": {},
    "outputs": [
@@ -74,6 +74,89 @@
     "from tomopt.core import *\n",
     "from tomopt.utils import *\n",
     "from tomopt.plotting import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6b7b8717",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-5-ccd5467a4826>:1: UserWarning: torch.meshgrid: in an upcoming release, it will be required to pass the indexing argument. (Triggered internally at  ../aten/src/ATen/native/TensorShape.cpp:2157.)\n",
+      "  torch.combinations(torch.arange(0, 10), with_replacement=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0, 0],\n",
+       "        [0, 1],\n",
+       "        [0, 2],\n",
+       "        [0, 3],\n",
+       "        [0, 4],\n",
+       "        [0, 5],\n",
+       "        [0, 6],\n",
+       "        [0, 7],\n",
+       "        [0, 8],\n",
+       "        [0, 9],\n",
+       "        [1, 1],\n",
+       "        [1, 2],\n",
+       "        [1, 3],\n",
+       "        [1, 4],\n",
+       "        [1, 5],\n",
+       "        [1, 6],\n",
+       "        [1, 7],\n",
+       "        [1, 8],\n",
+       "        [1, 9],\n",
+       "        [2, 2],\n",
+       "        [2, 3],\n",
+       "        [2, 4],\n",
+       "        [2, 5],\n",
+       "        [2, 6],\n",
+       "        [2, 7],\n",
+       "        [2, 8],\n",
+       "        [2, 9],\n",
+       "        [3, 3],\n",
+       "        [3, 4],\n",
+       "        [3, 5],\n",
+       "        [3, 6],\n",
+       "        [3, 7],\n",
+       "        [3, 8],\n",
+       "        [3, 9],\n",
+       "        [4, 4],\n",
+       "        [4, 5],\n",
+       "        [4, 6],\n",
+       "        [4, 7],\n",
+       "        [4, 8],\n",
+       "        [4, 9],\n",
+       "        [5, 5],\n",
+       "        [5, 6],\n",
+       "        [5, 7],\n",
+       "        [5, 8],\n",
+       "        [5, 9],\n",
+       "        [6, 6],\n",
+       "        [6, 7],\n",
+       "        [6, 8],\n",
+       "        [6, 9],\n",
+       "        [7, 7],\n",
+       "        [7, 8],\n",
+       "        [7, 9],\n",
+       "        [8, 8],\n",
+       "        [8, 9],\n",
+       "        [9, 9]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.combinations(torch.arange(0, 10), with_replacement=True)"
    ]
   },
   {
